--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,61 @@
     clear: both;
 }
 
+body{
+    font-family: 'Open Sans', sans-serif;
+}
+
 
 /* <--- HEADER ---> */
 
+header{
+    height: 80px;
+    line-height: 80px;
+    font-size: 12px;
+    }
+
+.nav-left{
+    float: left;
+    
+}
+
+.nav-left img{
+    width: 25%;
+    vertical-align: middle;
+    margin-left: 10px;
+    
+}
+
+.nav-right{
+    float: right;
+    margin-right: 10px;
+}
+
+nav{
+    display: inline-block;
+}
+
+nav li{
+    display: inline-block;
+    text-align: center; 
+    margin: 0 10px;
+    
+}
+
+nav li a{
+    text-decoration: none;
+    
+}
+
+.debug nav li a:visited{
+    color: inherit;
+}
+
+.debug .nav-right li:last-child a{
+    color: white;
+    background-color: #0061ff;
+    padding: 3px 10px;
+}
 
 
 
@@ -28,7 +80,7 @@
 
 /* <--- DEBUG ---> */
 
-.debug header{
+/* .debug header{
     height: 80px;
     background-color: blue;
     border: 1px solid black; 
@@ -75,4 +127,4 @@
 
 .debug .nav-right li:last-child a{
     background-color: blue;
-}
+} */
