--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,26 @@ body{
     margin: 0 auto;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:visited{
+    color: inherit;
+}
 
 /* <--- HEADER ---> */
 
 header{
     height: 80px;
+    width: 100%;
+    background-color: white;
     font-size: 12px;
     line-height: 80px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
     }
 
 .nav-left{
@@ -52,15 +65,8 @@ nav li{
     margin: 0 10px;
 }
 
-nav li a{
-    text-decoration: none;
-}
 
-.debug nav li a:visited{
-    color: inherit;
-}
-
-.debug .nav-right li:last-child a{
+.nav-right li:last-child a{
     color: white;
     background-color: #0061ff;
     padding: 3px 10px;
@@ -69,54 +75,71 @@ nav li a{
 
 /* <--- JUMBOTRON ---> */
 
+#jumbotron{
+    height: 450px;
+    width: 100%;
+    margin-top: 80px;
+    background-color: #b9cfe5;
+    border: 1px solid white;
+}
 
+#jumbotron .text-jumbo{
+    width: 250px;
+    
+}
+
+#jumbotron .text-jumbo p{
+    font-size: 12px;
+    margin-bottom: 20px;
+}
+
+#jumbotron .text-jumbo span{
+    display: block;
+    margin: 10px 0;
+    font-size: 10px;
+}
+
+#jumbotron .text-jumbo span i{
+    font-size: 30px;
+    margin-top: 10px;
+}
+
+.text-jumbo, .img-jumbo{
+    float: left;
+    /* width: calc(100% / 2); */
+}
+
+.img-jumbo img{
+    width: 600px;
+}
+
+#jumbotron h1{
+    font-size: 50px;
+    margin-top: 50px;
+}
 
 
 
 /* <--- BOTTON ---> */
 
-.btn{
+.btn {
+    color: white;
+    background-color: #0061ff;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 5px 15px;
     
 }
+
+#jumbotron .btn{
+    display: inline;
+
+}
+
 
 /* <--- DEBUG JUMBOTRON ---> */
 
-#jumbotron{
-    height: 500px;
-    width: 100%;
-    background-color: #b9cfe5;
-    border: 1px solid black;
-}
 
-
-#jumbotron .text-jumbo{
-    height: 20px;
-    background-color: tomato;
-    
-}
-
-
-#jumbotron .text-jumbo span{
-    display: block;
-}
-
-#jumbotron .img-jumbo{
-    height: 20px;
-    background-color: aqua;
-}
-
-.text-jumbo, .img-jumbo{
-    float: left;
-    width: calc(100% / 2);
-}
-
-.img-jumbo img{
-    width: 70%;
-}
-
-#jumbotron h1{
-    font-size: 50px;
-}
 
 
 
