--- a/css/style.css
+++ b/css/style.css
@@ -154,16 +154,8 @@ main section:first-child{
 }
 
 .bullet li{
-
-    /* debug */
-    background-color: indigo;
-    border: 1px solid red;
-    /* debug */
-    
     display: inline-block;
     font-size:  13px;
-
-    
 }
 
 .bullet span{
@@ -179,8 +171,14 @@ main section:first-child{
     padding: 6px;
 }
 
+.column{
+    float: left;
+    width: calc(100% / 3 - 20px  ) ;
+}
 
-
+.central{
+    margin: 0 10px;
+}
 
 /* <--- DEBUG ---> */
 
@@ -188,7 +186,15 @@ main section:first-child{
  background-color: tomato;
 }
 
+.debug .bullet li{
+    background-color: indigo;
+    border: 1px solid red;
+}
 
+.debug .column{
+    background-color: lawngreen;
+    height: 300px;
+}
 .debug footer{
     height: 200px;
     background-color: grey;
