--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ main section:first-child{
 .bullet li{
     display: inline-block;
     font-size:  13px;
+    margin-top: 30px;
 }
 
 .bullet span{
@@ -173,11 +174,17 @@ main section:first-child{
 
 .column{
     float: left;
-    width: calc(100% / 3 - 20px  ) ;
+    width: calc(100% / 3 - 40px  );
+    margin-top: 30px;
+    border: 1 px solid grey;
 }
-
+.column span:first-child{
+    display: block;
+    border: 1px solid grey;
+    text-align: center;
+}
 .central{
-    margin: 0 10px;
+    margin: 30px 20px 0 20px;
 }
 
 /* <--- DEBUG ---> */
@@ -186,14 +193,14 @@ main section:first-child{
  background-color: tomato;
 }
 
-.debug .bullet li{
+/* .debug .bullet li{
     background-color: indigo;
     border: 1px solid red;
-}
+} */
 
 .debug .column{
     background-color: lawngreen;
-    height: 300px;
+    height: 600px;
 }
 .debug footer{
     height: 200px;
