--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
 }
 
 .container{
-    width: 60%;
+    width: 70%;
     margin: 0 auto;
 }
 
@@ -136,6 +136,7 @@ nav li{
     font-size: 14px;
     font-weight: 500;
     padding: 5px 15px;
+    text-align: center;
     
 }
 
@@ -150,7 +151,6 @@ nav li{
 main section:first-child{
     margin-top: 150px;
     font-size: 18px;
-    border: 1px solid black;
 }
 
 .bullet li{
@@ -173,20 +173,54 @@ main section:first-child{
 }
 
 .column{
+    height: 650px;
     float: left;
     width: calc(100% / 3 - 20px);
     margin-top: 30px;
-    border: 1 px solid grey;
+    border: 1px solid grey;
 }
 .column span:first-child{
     display: block;
-    border: 1px solid grey;
+    border-bottom: 1px solid grey;
     text-align: center;
+    font-size: 13px;
+    padding: 10px;
 }
 .central{
     margin: 30px 30px 0 30px;
 }
 
+.column ul{
+    padding: 20px;
+}
+
+.column ul li {
+    margin-bottom: 10px;
+    font-size: 10px ;
+}
+.typology li:last-of-type{
+    color: grey;
+}
+
+.column .typology h3{
+    font-size: 20px ;
+}
+.column .decoration{
+    text-decoration: underline;
+    color: #0061ff;
+}
+.offer-includes li:last-of-type{
+    color: grey;
+}
+
+.specification i{
+    color: #0061ff;
+}
+
+.specification li:first-child{
+    font-size: 13px;
+    font-weight: 600;
+}
 /* <--- DEBUG ---> */
 
 .debug main{
@@ -198,10 +232,10 @@ main section:first-child{
     border: 1px solid red;
 } */
 
-.debug .column{
+/* .debug .column{
     background-color: lawngreen;
-    height: 600px;
-}
+    
+} */
 .debug footer{
     height: 200px;
     background-color: grey;
