--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ main section:first-child{
 /* <--- SEZIONE ENTERPRISE ---> */
 
 .column{
-    height: 650px;
+    
     float: left;
     width: calc(100% / 3 - 20px);
     margin-top: 30px;
@@ -189,6 +189,9 @@ main section:first-child{
     text-align: center;
     font-size: 13px;
     padding: 10px;
+}
+.height{
+    height: 650px;
 }
 .central{
     margin: 30px 30px 0 30px;
