--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@
 body{
     font-family: 'Open Sans', sans-serif;
 }
+#jumbotron, main, footer{
+    max-width: 1320px;
+} 
 
 .container-jumbo {
     width: 80%;
@@ -87,7 +90,6 @@ nav li{
 
 #jumbotron{
     height: 450px;
-    max-width: 1320px;
     margin-top: 80px;
     background-color: #b9cfe5;
 }
@@ -186,7 +188,6 @@ main section:first-child{
 /* <--- SEZIONE COLONNE ---> */
 
 .column{
-    
     float: left;
     width: calc(100% / 3 - 20px);
     margin-top: 30px;
@@ -267,11 +268,18 @@ main section:first-child{
     padding: 40px;
 }
 
+
+/* <--- SEZIONE BUSINESS ---> */
+.business img {
+    width: 100%;
+    object-fit: cover;
+}
+
 /* <--- DEBUG ---> */
 
-/* .debug main{
+.debug main{
  background-color: tomato;
-} */
+}
 
 /* .debug .bullet li{
     background-color: indigo;
