--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ main section:first-child{
     padding: 10px;
 }
 .height{
-    height: 650px;
+    min-height: 650px;
 }
 .central{
     margin: 30px 30px 0 30px;
@@ -401,6 +401,36 @@ main section:first-child{
 }
 
 
+
+
+.faq li{
+    border-top: 1px solid gray;
+    width: calc(100%/2);
+    padding: 30px 0;
+}
+
+.faq li:first-child, .faq li:nth-child(2){
+    margin-top: 40px;
+}
+
+.faq li:nth-child(7){
+    border-bottom: 1px solid gray;
+}
+.faq li:nth-child(odd){
+    float: left;
+}
+
+.faq li:nth-child(even){
+    float: right;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.faq li:last-child{
+    margin-bottom: 100px;
+}
+
+
 /* <--- DEBUG ---> */
 
 .debug main{
@@ -428,5 +458,5 @@ main section:first-child{
 
 .debug footer{
     height: 200px;
-    background-color: grey;
+    background-color:black;
    }
