--- a/css/style.css
+++ b/css/style.css
@@ -405,7 +405,6 @@ main section:first-child{
 
 .faq li{
     border-top: 1px solid gray;
-    width: calc(100%/2);
     padding: 30px 0;
 }
 
@@ -413,15 +412,17 @@ main section:first-child{
     margin-top: 40px;
 }
 
-.faq li:nth-child(7){
+.faq li:nth-child(8){
     border-bottom: 1px solid gray;
 }
 .faq li:nth-child(odd){
     float: left;
+    width: 80%;
 }
 
 .faq li:nth-child(even){
     float: right;
+    width: 20%;
     text-align: right;
     padding-right: 20px;
 }
