--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,7 @@ main section:first-child{
 .faq li{
     border-top: 1px solid gray;
     padding: 30px 0;
+    font-weight: bold;
 }
 
 .faq li:first-child, .faq li:nth-child(2){
@@ -431,12 +432,59 @@ main section:first-child{
     margin-bottom: 100px;
 }
 
+/* <--- FOOTER ---> */
 
+footer{
+    height: 300px;
+    background-color:black;
+}
+
+footer nav{
+    width: 100%;
+}
+
+footer nav ul{
+    float: left;
+    width: calc(100% / 5 - 5px) ;
+    color: white;
+    font-size: 10px;
+    font-weight: bold;
+    padding: 50px 0; 
+}
+
+
+/* footer nav ul:first-child{
+    margin-left: 25px;
+} */
+
+footer nav li{
+    display: block;
+    margin: 5px;
+}
+
+footer nav li:first-child{
+    font-size: 16px;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+
+
+.bottom-footer{
+    display: inline;
+    font-size: 10px;
+    padding-top: 30px;
+    padding-right: 40px;
+    border-top: 1px solid white;
+}
+
+.bottom-footer span {
+    color: gray;
+}
 /* <--- DEBUG ---> */
 
-.debug main{
+/* .debug main{
  background-color: tomato;
-}
+} */
 
 /* .debug .bullet li{
     background-color: indigo;
@@ -452,12 +500,17 @@ main section:first-child{
     background-color: lawngreen;
 } */
 
+/* .debug footer nav{
+    border:1px solid lawngreen;
+} */
 
+/* .debug footer .top-footer{
+    height: 300px;
+    width: 100%;
+    margin: 0 auto;
+    border:1px solid blue;
+} */
 
-
-
-
-.debug footer{
-    height: 200px;
-    background-color:black;
-   }
+/* .debug .bottom-footer {
+    border: 1px solid yellowgreen
+} */
