--- a/css/style.css
+++ b/css/style.css
@@ -40,18 +40,8 @@ ul{
     list-style: none;
 }
 
-a {
-    text-decoration: none;
-}
 
-a:visited{
-    color: inherit;
-}
 
-body .decoration{
-    text-decoration: underline;
-    color: #0061ff;
-}
 
 /* <--- HEADER ---> */
 
@@ -66,7 +56,14 @@ header{
     top: 0;
     left: 0;
     z-index: 9999;
-    }
+}
+header a{
+    text-decoration: none;
+    
+}
+header a:visited{
+    color: inherit;
+}
 
 .nav-left{
     float: left;
@@ -146,21 +143,33 @@ nav li{
 
 /* <--- BOTTON ---> */
 
-.btn {
-    color: white;
-    background-color: #0061ff;
-    font-size: 14px;
+.btn a:visited, .white a:visited{
+    color: inherit;
+}
+
+.btn, .white{
     font-weight: 500;
     padding: 5px 15px;
     text-align: center;
-    
+    text-decoration: none;
 }
 
-.white{
-    background-color: white;
-    border: 1px solid black;
-    font-size: 12px;
+
+.btn {
+    font-size: 14px;
+    color: white;
+    background-color: #0061ff;
 }
+
+
+.white{
+    font-size: 12px;
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+}
+
+
 #jumbotron .btn{
     display: inline;
 }
@@ -241,9 +250,9 @@ main section:first-child{
 }
 
 
-.specification i{
+/* .specification i{
     color: #0061ff;
-}
+} */
 
 .specification li:first-child{
     font-size: 13px;
@@ -457,23 +466,71 @@ footer nav li{
     margin: 5px;
 }
 
-footer nav li:first-child{
+.top-footer a{
+    color: white;
+    text-decoration: none;
+}
+
+.top-footer a:hover{
+    text-decoration: underline;
+}
+
+.top-footer nav li:first-child{
     font-size: 16px;
     margin-bottom: 15px;
     font-weight: bold;
 }
 
 .bottom-footer{
-    display: inline;
     font-size: 10px;
-    padding-top: 30px;
-    padding-right: 40px;
+    padding: 15px 40px 15px 0;
     border-top: 1px solid white;
+    /* border: 1px solid red; */
 }
 
-.bottom-footer a {
+.language{
     color: gray;
+    display: inline;
 }
+
+.language a:hover .language-menu{
+    height: 25px;
+    width: 25px;
+    /* border: 1px solid yellow; */
+}
+
+/* .language-menu{
+    display: none;
+    height: 30px;
+    color: white;
+    font-size: 10px;
+    font-weight: bold;
+    overflow: scroll;
+    border:1px solid red;
+    margin-right: 50px;
+}    */
+
+.language:hover .language-menu{
+    display: block;
+} 
+
+.language-menu img{
+    width: 20px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+.language-menu nav li {
+    height: 30px;
+    line-height: 30px;
+    margin: 0;
+    border: 1px solid greenyellow;
+}
+
+/* .language{
+    border: 1px solid yellow;
+} */
+
 /* <--- DEBUG ---> */
 
 /* .debug main{
